--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.6",
+    "@types/helmet": "0.0.47",
+    "@types/http-errors": "^1.6.3",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "concurrently": "^5.2.0",
