--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
+    "uuid": "^8.1.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/express": "^4.17.6",
     "@types/helmet": "0.0.47",
     "@types/http-errors": "^1.6.3",
+    "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "concurrently": "^5.2.0",
