--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     ports:
      - "3000:3000"
     volumes:
-     - .:/app
-     - /app/node_modules
+      - /app/node_modules
+      - ./src:/app/src
+      - ./dist:/app/dist
